设置背景样式

--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -3,55 +3,43 @@
 {% block title %}
 <title>Gather-聚</title>
 {% endblock %}
+{% block extra_css %}
+<style type="text/css">
+p{
+  font-size: 19px;
+  margin: 2px;
+  text-align: right;
+}
+</style>
+{% endblock %}
 
 {% block container %}
- <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>百字令 言缘</h1>
-         <p>恋
-            无言
-            常流连
-            近及眼前
-            亦悠扬思念
-            纵然荒漠并肩
-            琪花瑶草植心田
-            不惧不怨不思困倦
-            不痴不癫不曾尝思迁
-            纵使岁月癫狂凋零容颜
-            有始有卒有愿妄婵娟 
-            有心有意有梦不变
-            曾不惨然再十年
-            依偎烙印胸前
-            挚恋驻心坚
-            缜密无间
-            拥侧脸
-            惊艳
-            缘
-        </p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">更多...</a></p>
-      </div>
-    </div>
-
-    <div class="container">
+    <div class="container" style="height:800px;margin-top:50px;background:url('/static/images/index.jpg') no-repeat">
       <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-4">
-          <h2>Love</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-          <h2>Miss</h2>
-          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-       </div>
-        <div class="col-md-4">
-          <h2>Hope</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-sm-offset-10" >
+          <br>
+          <br>
+           <p> 恋</p>
+           <p> 无言</p>
+           <p> 常流连</p>
+           <p> 近及眼前</p>
+           <p> 亦悠扬思念</p>
+           <p> 纵然荒漠并肩</p>
+           <p> 琪花瑶草植心田</p>
+           <p> 不惧不怨不思困倦</p>
+           <p> 不痴不癫不曾尝思迁</p>
+           <p> 纵使岁月癫狂凋零容颜</p>
+           <p> 有始有卒有愿妄婵娟 </p>
+           <p> 有心有意有梦不变</p>
+           <p> 曾不惨然再十年</p>
+           <p> 依偎烙印胸前</p>
+           <p> 挚恋驻心坚</p>
+           <p> 缜密无间</p>
+           <p> 拥侧脸</p>
+           <p> 惊艳</p>
+           <p> 缘</p>
         </div>
       </div>
-
-      <hr>
+</div>
 {% endblock %}
