--- a/gather/templates/account/regist.html
+++ b/gather/templates/account/regist.html
@@ -1,8 +1,26 @@
-{% extends 'base.html'%}
-
+{% extends 'base_no_login.html'%}
+{% load staticfiles %}
 {% block title %}
 <title>Gather-注册</title>
 {% endblock %}
 
+{% block extra_css %}
+<link href="{% static "styles/regist.css" %}" rel="stylesheet" type="text/css">
+{% endblock %}
+
 {% block container %}
+<div class="container" style="height:800px;background:url('/static/images/regist.jpg')">
+
+  <form class="form-signin" role="form">
+    <div style="margin-left:-150px;margin-top:150px;width:300px;">
+        <h3 class="form-signin-heading">百字令</h3>
+        <input type="email" class="form-control" placeholder="邮箱地址" name="username" required autofocus/>
+        <input type="password" class="form-control" placeholder="密码" name="password" required/>
+        <input type="password" class="form-control" placeholder="再次输入" name="confirm_password" required/>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
+    </div>
+  </form>
+
+</div> <!-- /container -->
+
 {% endblock %}
