--- a/gather/templates/base_no_login.html
+++ b/gather/templates/base_no_login.html
@@ -26,18 +26,8 @@
           </button>
           <a class="navbar-brand" href="/">Gather All</a>
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <form action="{% url 'login' %}" method="post" class="navbar-form navbar-right" role="form">
-            {% csrf_token %}
-            <div class="form-group">
-              <input type="text" placeholder="邮箱地址" class="form-control">
-            </div>
-            <div class="form-group">
-              <input type="password" placeholder="密码" class="form-control">
-            </div>
-            <button type="button" class="btn btn-info">登录</button>
-            <a href="{%url 'regist' %}" class="btn btn-danger">注册</a>
-          </form>
+        <div id="navbar" class="navbar-collapse collapse navbar-right navbar-form">
+            <a href="{%url 'login' %}" class="btn btn-primary">登录</a>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
