添加注册发送邮件

--- a/gather/templates/base_no_login.html
+++ b/gather/templates/base_no_login.html
@@ -27,7 +27,7 @@
           <a class="navbar-brand" href="/">Gather All</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse navbar-right navbar-form">
-            <a href="{%url 'login' %}" class="btn btn-primary">登录</a>
+            <a href="/" class="btn btn-primary">登录</a>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
