--- a/gather/templates/account/regist.html
+++ b/gather/templates/account/regist.html
@@ -11,11 +11,26 @@
 {% block container %}
 <div class="container" style="height:800px;background:url('/static/images/regist.jpg')">
 
-  <form class="form-signin" role="form">
+  <form class="form-signin" role="form" action="." method="post">
+    {% csrf_token %}
     <div style="margin-left:-150px;margin-top:150px;width:300px;">
-        <h3 class="form-signin-heading">百字令</h3>
-        <input type="email" class="form-control" placeholder="邮箱地址" name="username" required autofocus/>
-        <input type="password" class="form-control" placeholder="密码" name="password" required/>
+    {% if form.non_field_errors %}
+        {% for error in form.non_field_errors %}
+        <div class="alert alert-danger">
+            {{ error }}
+        </div>
+        {% endfor %}
+    {% endif %}
+
+    {% if form.username.errors %}
+        {% for error in form.username.errors %}
+        <div class="alert alert-danger">
+           {{ error }}
+        </div>
+        {% endfor %}
+    {% endif %}
+        <input type="email" class="form-control" placeholder="邮箱地址" name="username"  required autofocus/>
+        <input type="password" class="form-control" placeholder="密码" name="password" style="margin-top:13px;" required/>
         <input type="password" class="form-control" placeholder="再次输入" name="confirm_password" required/>
         <button class="btn btn-lg btn-primary btn-block" type="submit">注册</button>
     </div>
