--- a/gather/static/styles/regist.css
+++ b/gather/static/styles/regist.css
@@ -38,3 +38,11 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+
+.pager-regist {
+  padding-left: 0;
+  margin: 20px 0;
+  text-align: center;
+  list-style: none;
+  margin-top: 25px;
+}
