--- a/gather/templates/account/regist.html
+++ b/gather/templates/account/regist.html
@@ -9,7 +9,8 @@
 {% endblock %}
 
 {% block container %}
-<div class="container" style="height:800px;background:url('/static/images/regist.jpg')">
+<!--<div class="container" style="height:800px;background:url('/static/images/regist.jpg')">-->
+<div class="container">
 
   <form class="form-signin" role="form" action="." method="post">
     {% csrf_token %}
