--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -7,7 +7,7 @@
 {% block title %}
 <title>GATHER</title>
 {% endblock %}
-<link href="{% static "styles/bootstrap.min.css" %}" rel="stylesheet" type="text/css">
+<link href="{% static "styles/bootstrap.css" %}" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" type="image/png" href="{% static "images/favicon.ico" %}"/>
 {% block extra_css %}
 <!--其他页面特有的CSS-->
@@ -24,23 +24,44 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Gather All</a>
+          <a class="navbar-brand" href="/">Gather</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
+          {% if request.user.is_authenticated %}
+            <div class="btn-group navbar-form navbar-right">
+              <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown">
+                {{ request.user.username }}
+              <span class="caret"></span>
+              </button>
+              <ul class="dropdown-menu" role="menu">
+                <li><a href="#">我的账户</a></li>
+                <li><a href="#">收藏夹</a></li>
+                <li><a href="#">关注</a></li>
+                <li class="divider"></li>
+                <li><a href="#">退出</a></li>
+              </ul>
+            </div>
+          {% else %}
           <form action="{% url 'login' %}" method="post" class="navbar-form navbar-right" role="form">
             {% csrf_token %}
             <div class="form-group">
-              <input type="text" placeholder="邮箱地址" class="form-control">
+              <input type="text" placeholder="邮箱地址" class="form-control" name="username">
             </div>
             <div class="form-group">
-              <input type="password" placeholder="密码" class="form-control">
+              <input type="password" placeholder="密码" class="form-control" name="password">
             </div>
-            <button type="button" class="btn btn-info">登录</button>
+            <button type="submit" class="btn btn-info">登录</button>
             <a href="{%url 'regist' %}" class="btn btn-danger">注册</a>
           </form>
+          {% endif %}
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
+  {% if messages %}
+  {% for message in messages %}
+  <div class="alert alert-{{ message.tags }}-message" role="alert">{{ message }}</div>
+  {% endfor %}
+  {% endif %}
 {% endblock %} 
 
 {% block container %}
@@ -49,6 +70,17 @@
 {% block foot %} 
       <footer>
         <p>&copy; Company 2014</p>
+        {% for error in form.non_field_errors %} 
+        {{ error }}
+        {% endfor %}
+
+        {% for error in form.username.errors %}
+        {{ error }}
+        {% endfor %}
+
+        {% for error in form.password.errors %}
+        {{ error }}
+        {% endfor %}
       </footer>
 {% endblock %} 
     </div> <!-- /container -->
