--- a/gather/templates/account/regist.html
+++ b/gather/templates/account/regist.html
@@ -9,21 +9,17 @@
 {% endblock %}
 
 {% block container %}
-<!--<div class="container" style="height:800px;background:url('/static/images/regist.jpg')">-->
-<div class="container">
-
+<div class="container" style="height:800px;background:url('/static/images/regist.jpg')">
   <form class="form-signin" role="form" action="." method="post">
     {% csrf_token %}
-    <div style="margin-left:-150px;margin-top:150px;width:300px;">
+    <div class="regist">
     {% if form.non_field_errors %}
         {% for error in form.non_field_errors %}
         <div class="alert alert-danger">
             {{ error }}
         </div>
         {% endfor %}
-    {% endif %}
-
-    {% if form.username.errors %}
+    {% elif form.username.errors %}
         {% for error in form.username.errors %}
         <div class="alert alert-danger">
            {{ error }}
