--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -34,11 +34,11 @@
               <span class="caret"></span>
               </button>
               <ul class="dropdown-menu" role="menu">
-                <li><a href="#">我的账户</a></li>
-                <li><a href="#">收藏夹</a></li>
-                <li><a href="#">关注</a></li>
+                <li><a href="{% url 'account'%}">我的账户</a></li>
+                <li><a href="{% url 'account'%}">收藏夹</a></li>
+                <li><a href="{% url 'account'%}">关注</a></li>
                 <li class="divider"></li>
-                <li><a href="#">退出</a></li>
+                <li><a href="{% url 'logout' %}">退出</a></li>
               </ul>
             </div>
           {% else %}
@@ -59,7 +59,7 @@
     </nav>
   {% if messages %}
   {% for message in messages %}
-  <div class="alert alert-{{ message.tags }}-message" role="alert">{{ message }}</div>
+  <div class="alert alert-{{ message.tags }}-message" role="alert" style="float:left">{{ message }}</div>
   {% endfor %}
   {% endif %}
 {% endblock %} 
@@ -68,7 +68,7 @@
 {% endblock %} 
 
 {% block foot %} 
-      <footer>
+      <footer class="pager">
         <p>&copy; Company 2014</p>
         {% for error in form.non_field_errors %} 
         {{ error }}
