--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -14,7 +14,7 @@ p{
 {% endblock %}
 
 {% block container %}
-    <div class="container" style="height:800px;margin-top:50px;background:url('/static/images/index.jpg') no-repeat">
+    <div class="container index" style="background:url('/static/images/index.jpg') no-repeat">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-sm-offset-10" >
