--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -8,6 +8,7 @@
 <title>GATHER</title>
 {% endblock %}
 <link href="{% static "styles/bootstrap.css" %}" rel="stylesheet" type="text/css">
+<link href="{% static "styles/regist.css" %}" rel="stylesheet" type="text/css">
 <link rel="shortcut icon" type="image/png" href="{% static "images/favicon.ico" %}"/>
 {% block extra_css %}
 <!--其他页面特有的CSS-->
