--- a/gather/static/styles/regist.css
+++ b/gather/static/styles/regist.css
@@ -47,8 +47,30 @@ body {
   margin-top: 25px;
 }
 
+.no_nav {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 50px;
+}
+
 .regist{
   margin-left:-150px;
   margin-top:150px;
   width:300px;
+}
+
+.index{
+  margin-top: 50px;
+  height: 800px;
+}
+
+.verify_email{
+  margin-top: 100px;
+}
+
+.account{
+  height: 800px;
+  margin-top: 0px;
 }
