--- a/gather/templates/account/email_verify.html
+++ b/gather/templates/account/email_verify.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container %}
-<div class="no_nav">
+<div class="no_nav index">
     <div class="progress">
       <div class="progress-bar progress-bar-success progress-bar-striped" role="progressbar" aria-valuenow="40" aria-valuemin="0" aria-valuemax="100" style="width: 50%">
         <span class="sr-only">50% Complete (success)</span>
