--- a/gather/templates/account/index.html
+++ b/gather/templates/account/index.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block container %}
-<div class="no_nav" style="height:800px;background:url('/static/images/account.jpg')">
+<div class="no_nav account" style="background:url('/static/images/account.jpg')">
     
 </div>
 {% endblock %}
