--- a/gather/templates/account/index.html
+++ b/gather/templates/account/index.html
@@ -1,10 +1,13 @@
-{% extends 'base.html'%}
+{% extends 'account/base.html'%}
 {% load staticfiles %}
-{% block title %}
-<title>Gather-个人主页</title>
+{% block title %}<title>Gather-个人主页</title>{% endblock %}
+{% block account_li %}class="active"{% endblock %}
+
+{% block extra_css%}
+<link href="{% static "styles/bookmark.css" %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
-{% block container %}
+{% block main %}
 <div class="no_nav account" style="background:url('/static/images/account.jpg')">
     
 </div>
