--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -38,6 +38,7 @@
                 <li><a href="{% url 'account' %}">我的账户</a></li>
                 <li><a href="{% url 'bookmark' %}">收藏夹</a></li>
                 <li><a href="{% url 'account' %}">关注</a></li>
+                <li><a href="{% url 'import_bookmark' %}">导入书签</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'logout' %}">退出</a></li>
               </ul>
