--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -14,31 +14,20 @@ p{
 {% endblock %}
 
 {% block container %}
-    <div class="container index" style="background:url('/static/images/index.jpg') no-repeat">
+    <div class="container index">
       <!-- Example row of columns -->
       <div class="row">
+        <div class="col-sm-10">
+          {% for img in imgs %}
+          <a href="{{ img.link_url }}"><img style="width:960px;height:800px;" src="{{ img.index_img.url }}"/></a>
+          {% endfor %}
+        </div>
         <div class="col-sm-offset-10" >
           <br>
           <br>
-           <p> 恋</p>
-           <p> 无言</p>
-           <p> 常流连</p>
-           <p> 近及眼前</p>
-           <p> 亦悠扬思念</p>
-           <p> 纵然荒漠并肩</p>
-           <p> 琪花瑶草植心田</p>
-           <p> 不惧不怨不思困倦</p>
-           <p> 不痴不癫不曾尝思迁</p>
-           <p> 纵使岁月癫狂凋零容颜</p>
-           <p> 有始有卒有愿妄婵娟 </p>
-           <p> 有心有意有梦不变</p>
-           <p> 曾不惨然再十年</p>
-           <p> 依偎烙印胸前</p>
-           <p> 挚恋驻心坚</p>
-           <p> 缜密无间</p>
-           <p> 拥侧脸</p>
-           <p> 惊艳</p>
-           <p> 缘</p>
+          {% for p in texts %}
+           {{ p.content|safe }}
+          {% endfor %}
         </div>
       </div>
 </div>
