--- a/gather/static/styles/bookmark.css
+++ b/gather/static/styles/bookmark.css
@@ -14,6 +14,7 @@ body {
 }
 @media (min-width: 768px) {
 .sidebar {
+    text-align: center;
     background-color: #f5f5f5;
     border-right: 1px solid #eee;
     bottom: 0;
@@ -37,7 +38,7 @@ body {
     padding-right: 20px;
 }
 .nav-sidebar > .active > a, .nav-sidebar > .active > a:hover, .nav-sidebar > .active > a:focus {
-    background-color: #428bca;
+    background-color: #0090ff;
     color: #fff;
 }
 .main {
