--- a/gather/templates/account/base.html
+++ b/gather/templates/account/base.html
@@ -7,8 +7,7 @@
           <ul class="nav nav-sidebar">
             <li {% block account_li %}{% endblock %}><a href="{% url 'account' %}">我的账户</a></li>
             <li {% block bookmark_li %}{% endblock %}><a href="{% url 'bookmark' %}">收藏夹</a></li>
-            <li {% block import_li %}{% endblock %}><a href="{% url 'import_bookmark' %}">导入</a></li>
-            <li><a href="#">sth</a></li>
+            <li {% block import_li %}{% endblock %}><a href="{% url 'import_bookmark' %}">导入书签</a></li>
             <li><a href="#">修改密码</a></li>
           </ul>
         </div>
