--- a/gather/templates/bookmark/bookmark.html
+++ b/gather/templates/bookmark/bookmark.html
@@ -21,142 +21,32 @@
 {% block main %}
 <div id="container">
     <ol id="filters">
-      <li data-filter="amsterdam">Amsterdam</li>
-      <li data-filter="tokyo">Tokyo</li>
-      <li data-filter="london">London</li>
-      <li data-filter="paris">Paris</li>
-      <li data-filter="berlin">Berlin</li>
-      <li data-filter="sport">Sport</li>
-      <li data-filter="fashion">Fashion</li>
-      <li data-filter="video">Video</li>
-      <li data-filter="art">Art</li>
+      <li data-filter="git">git</li>
+      <li data-filter="python">python</li>
+      <li data-filter="django">django</li>
+      <li data-filter="mysql">mysql</li>
+      <li data-filter="jquery">jquery</li>
     </ol>
     <br/>
 
     <div id="main" role="main">
 
       <ul id="tiles">
-        <li data-filter-class='["london", "art"]'>
-          <img src="/static/waterfall/images/image_1.jpg" height="283" width="200">
-          <p>London Art</p>
+        {% if bookmarks %}
+        {% for bookmark in bookmarks %}
+        <li data-filter-class='["git", "python"]'>
+          <a href="{{ bookmark.url }}" target="_blank">{{ bookmark.title }}</a>
+          <div>
+          <p>
+            <span class="glyphicon glyphicon-heart" style="color:red;margin-right:3px;"></span>5
+            <span class="label label-primary" style="margin-left:63px;">评论(3)</span> 
+          </p> 
+          </div>   
         </li>
-        <li data-filter-class='["berlin", "art"]'>
-          <img src="/static/waterfall/images/image_2.jpg" height="300" width="200">
-          <p>Berlin Art</p>
-        </li>
-        <li data-filter-class='["berlin", "video"]'>
-          <img src="/static/waterfall/images/image_3.jpg" height="252" width="200">
-          <p>Berlin Video</p>
-        </li>
-        <li data-filter-class='["tokyo", "fashion"]'>
-          <img src="/static/waterfall/images/image_4.jpg" height="158" width="200">
-          <p>Tokyo Fashion</p>
-        </li>
-        <li data-filter-class='["berlin", "art"]'>
-          <img src="/static/waterfall/images/image_5.jpg" height="300" width="200">
-          <p>Berlin Art</p>
-        </li>
-        <li data-filter-class='["tokyo", "fashion"]'>
-          <img src="/static/waterfall/images/image_6.jpg" height="297" width="200">
-          <p>Tokyo Fashion</p>
-        </li>
-        <li data-filter-class='["london", "art"]'>
-          <img src="/static/waterfall/images/image_7.jpg" height="200" width="200">
-          <p>London Art</p>
-        </li>
-        <li data-filter-class='["tokyo", "video"]'>
-          <img src="/static/waterfall/images/image_8.jpg" height="200" width="200">
-          <p>Tokyo Video</p>
-        </li>
-        <li data-filter-class='["tokyo", "art"]'>
-          <img src="/static/waterfall/images/image_9.jpg" height="398" width="200">
-          <p>Tokyo Art</p>
-        </li>
-        <li data-filter-class='["berlin", "fashion"]'>
-          <img src="/static/waterfall/images/image_10.jpg" height="267" width="200">
-          <p>Berlin Fashion</p>
-        </li>
-        <li data-filter-class='["amsterdam", "art"]'>
-          <img src="/static/waterfall/images/image_1.jpg" height="283" width="200">
-          <p>Amsterdam Art</p>
-        </li>
-        <li data-filter-class='["paris", "video"]'>
-          <img src="/static/waterfall/images/image_2.jpg" height="300" width="200">
-          <p>Paris Video</p>
-        </li>
-        <li data-filter-class='["london", "video"]'>
-          <img src="/static/waterfall/images/image_3.jpg" height="252" width="200">
-          <p>London Video</p>
-        </li>
-        <li data-filter-class='["london", "video"]'>
-          <img src="/static/waterfall/images/image_4.jpg" height="158" width="200">
-          <p>London Video</p>
-        </li>
-        <li data-filter-class='["amsterdam"," video"]'>
-          <img src="/static/waterfall/images/image_5.jpg" height="300" width="200">
-          <p>Amsterdam Video</p>
-        </li>
-        <li data-filter-class='["tokyo", "fashion"]'>
-          <img src="/static/waterfall/images/image_6.jpg" height="297" width="200">
-          <p>Tokyo Fashion</p>
-        </li>
-        <li data-filter-class='["tokyo", "sport"]'>
-          <img src="/static/waterfall/images/image_7.jpg" height="200" width="200">
-          <p>Tokyo Sport</p>
-        </li>
-        <li data-filter-class='["berlin", "video"]'>
-          <img src="/static/waterfall/images/image_8.jpg" height="200" width="200">
-          <p>Berlin Video</p>
-        </li>
-        <li data-filter-class='["amsterdam", "fashion"]'>
-          <img src="/static/waterfall/images/image_9.jpg" height="398" width="200">
-          <p>Amsterdam Fashion</p>
-        </li>
-        <li data-filter-class='["berlin", "sport"]'>
-          <img src="/static/waterfall/images/image_10.jpg" height="267" width="200">
-          <p>Berlin Sport</p>
-        </li>
-        <li data-filter-class='["paris", "video"]'>
-          <img src="/static/waterfall/images/image_1.jpg" height="283" width="200">
-          <p>Paris Video</p>
-        </li>
-        <li data-filter-class='["tokyo", "sport"]'>
-          <img src="/static/waterfall/images/image_2.jpg" height="300" width="200">
-          <p>Tokyo Sport</p>
-        </li>
-        <li data-filter-class='["amsterdam", "art"]'>
-          <img src="/static/waterfall/images/image_3.jpg" height="252" width="200">
-          <p>Amsterdam Art</p>
-        </li>
-        <li data-filter-class='["berlin", "sport"]'>
-          <img src="/static/waterfall/images/image_4.jpg" height="158" width="200">
-          <p>Berlin Sport</p>
-        </li>
-        <li data-filter-class='["paris", "art"]'>
-          <img src="/static/waterfall/images/image_5.jpg" height="300" width="200">
-          <p>Paris Art</p>
-        </li>
-        <li data-filter-class='["berlin", "art"]'>
-          <img src="/static/waterfall/images/image_6.jpg" height="297" width="200">
-          <p>Berlin Art</p>
-        </li>
-        <li data-filter-class='["london", "art"]'>
-          <img src="/static/waterfall/images/image_7.jpg" height="200" width="200">
-          <p>London Art</p>
-        </li>
-        <li data-filter-class='["london", "video"]'>
-          <img src="/static/waterfall/images/image_8.jpg" height="200" width="200">
-          <p>London Video</p>
-        </li>
-        <li data-filter-class='["london", "video"]'>
-          <img src="/static/waterfall/images/image_9.jpg" height="398" width="200">
-          <p>London Video</p>
-        </li>
-        <li data-filter-class='["paris", "video"]'>
-          <img src="/static/waterfall/images/image_10.jpg" height="267" width="200">
-          <p>Paris Video</p>
-        </li>
-        <!-- End of grid blocks -->
+        {% endfor %}
+        {% else %}
+        暂无书签，请导入<a href="{% url 'import' %}">点击</a>
+        {% endif %}
       </ul>
 
     </div>
