--- a/gather/templates/bookmark/import.html
+++ b/gather/templates/bookmark/import.html
@@ -8,9 +8,11 @@
 {% endblock %}
 
 {% block main %}
-<div class="no_nav account">
-    <form action="." method="post">
+<div class="no_nav account center">
+    <form action="." method="post" enctype="multipart/form-data">
+        {% csrf_token %}
         <input type="file" name="bookmark"/>
+        <input type="submit" value="上传"/>
     </form> 
 </div>
 {% endblock %}
