修复书签页无数据的bug

--- a/gather/templates/bookmark/bookmark.html
+++ b/gather/templates/bookmark/bookmark.html
@@ -45,7 +45,7 @@
         </li>
         {% endfor %}
         {% else %}
-        暂无书签，请导入<a href="{% url 'import' %}">点击</a>
+        暂无书签，请导入<a href="{% url 'import_bookmark' %}">点击</a>
         {% endif %}
       </ul>
 
