--- a/gather/templates/bookmark/import.html
+++ b/gather/templates/bookmark/import.html
@@ -8,7 +8,7 @@
 {% endblock %}
 
 {% block main %}
-<div class="no_nav account center">
+<div class="no_nav account">
     <form action="." method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="file" name="bookmark"/>
