--- a/gather/templates/bookmark/import.html
+++ b/gather/templates/bookmark/import.html
@@ -14,5 +14,8 @@
         <input type="file" name="bookmark"/>
         <input type="submit" value="上传"/>
     </form> 
+    <div class="bs-callout bs-callout-info"><a href="http://jingyan.baidu.com/article/d5c4b52bcd5c0ada560dc5da.html">如何将<span class="label label-success" target="_blank">chrome</span> 中的书签导出为html文件</a></div>
+    <div class="bs-callout bs-callout-info"><a href="http://jingyan.baidu.com/article/cbf0e500e95d5e2eab289363.html">如何将<span class="label label-success" target="_blank">firfox</span> 中的书签导出为html文件</a></div>
+
 </div>
 {% endblock %}
