--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -14,7 +14,7 @@ p{
 {% endblock %}
 
 {% block container %}
-    <div class="container index">
+    <div class="container">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-sm-10">
