--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -74,7 +74,7 @@
 
 {% block foot %} 
       <footer class="pager">
-        <p>&copy; Company 2015.jacsice</p>
+        <p>&copy; Company 2015.jacsice.forgive me</p>
         {% for error in form.non_field_errors %} 
         {{ error }}
         {% endfor %}
