--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -1,34 +1,47 @@
 {% extends 'base.html'%}
-
+{% load staticfiles %}
 {% block title %}
 <title>Gather-聚</title>
 {% endblock %}
-{% block extra_css %}
-<style type="text/css">
-p{
-  font-size: 19px;
-  margin: 2px;
-  text-align: right;
-}
-</style>
+
+{% block extra_css%}
+<link href="{% static "styles/index.css" %}" rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block container %}
-    <div class="container">
-      <!-- Example row of columns -->
-      <div class="row">
-        <div class="col-sm-10">
-          {% for img in imgs %}
-          <a href="{{ img.link_url }}"><img style="width:960px;height:800px;" src="{{ img.index_img.url }}"/></a>
-          {% endfor %}
-        </div>
-        <div class="col-sm-offset-10" >
-          <br>
-          <br>
-          {% for p in texts %}
-           {{ p.content|safe }}
-          {% endfor %}
-        </div>
-      </div>
+<div class="container index">
+  <div class="container">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+      <form class="form-inline" role="form" action='.' method="post">
+        {% csrf_token %}
+          <div class="form-group">
+            <input type="input" class="form-control input-lg" placeholder="Come on!" name="note">
+          </div>
+          <div class="checkbox">
+            <label>
+              <button class="btn btn-danger btn-lg" type="submit">shout out</button>
+            </label>
+          </div>
+      </form>
+    </div>
+  </div>
+
+  <br/>
+  <br/>
+
+  <div class="container">
+      <ul class="note">
+        {% for node in nodes %}
+        <li >
+          <a href="">
+            <h2>{{ node.title }}</h2>
+            <h5>{{ node.created|date:'Y-m-d H:i:s' }}</h5>
+          </a>
+        </li>
+        {% endfor %}
+      </ul>
+  </div>
+
 </div>
 {% endblock %}
