添加便签评论功能

--- a/gather/static/styles/bootstrap.css
+++ b/gather/static/styles/bootstrap.css
@@ -5550,6 +5550,7 @@ button.close {
   overflow: hidden;
   -webkit-overflow-scrolling: touch;
   outline: 0;
+  margin-top: 50px;
 }
 .modal.fade .modal-dialog {
   -webkit-transition: -webkit-transform .3s ease-out;
