--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -41,6 +41,7 @@
                 <li><a href="{% url 'bookmark' %}">收藏夹</a></li>
                 <li><a href="{% url 'add_article' %}">发表文章</a></li>
                 <li><a href="{% url 'import_bookmark' %}">导入书签</a></li>
+                <li><a href="{% url 'head_pic_big' %}">上传头像</a></li>
                 <li class="divider"></li>
                 <li><a href="{% url 'logout' %}">退出</a></li>
               </ul>
