--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -12,7 +12,7 @@
 <div class="container index">
   <div class="container">
     <div class="col-md-4"></div>
-    <div class="col-md-4">
+    <div class="col-md-6">
       <form class="form-inline" role="form" action='.' method="post">
         {% csrf_token %}
           <div class="form-group">
@@ -52,7 +52,7 @@
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
         <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
-      <div class="modal-body" id="comment-body">
+      <div class="modal-body pre-scrollable" id="comment-body">
 
         <!--
             <div style="border-top:1px solid #eee;margin-bottom:5px;">
@@ -82,6 +82,7 @@
   </div>
 </div>
 
+</div>
 </div>
 {% endblock %}
 
