--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -30,7 +30,7 @@
   <br/>
   <br/>
 
-  <div class="container">
+  <div class="container index">
       <ul class="note">
         {% for node in nodes %}
         <li >
@@ -42,6 +42,21 @@
         </li>
         {% endfor %}
       </ul>
+
+      <nav>
+        <ul class="pager">
+          {% if nodes.has_previous %}
+          <li class="previous"><a href="?page={{ nodes.previous_page_number }}">&larr; Newer</a></li>
+          {% else %}
+          <li class="previous disabled"><a href="#">&larr; Newer</a></li>
+          {% endif %}
+          {% if nodes.has_next %}
+          <li class="next"><a href="?page={{ nodes.next_page_number }}">Older &rarr;</a></li>
+          {% else %}
+          <li class="next disabled"><a href="#">Older &rarr;</a></li>
+          {% endif %}
+        </ul>
+      </nav>
   </div>
 
 <!-- Modal -->
