--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block container %}
-<div class="container">
+<div class="container index">
   <div class="container">
     <div class="col-md-4"></div>
     <div class="col-md-6">
