修复上传头像，上传按钮被覆盖bug

--- a/gather/static/styles/bootstrap.css
+++ b/gather/static/styles/bootstrap.css
@@ -6390,4 +6390,8 @@ button.close {
     display: none !important;
   }
 }
+
+.x-none{
+  overflow-x: hidden;
+}
 /*# sourceMappingURL=bootstrap.css.map */
