--- a/gather/templates/base_no_login.html
+++ b/gather/templates/base_no_login.html
@@ -14,7 +14,7 @@
 <!--其他页面特有的CSS-->
 {% endblock %}
 </head>
-<body>
+<body class="x-none">
 {% block header %} 
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
       <div class="container">
