--- a/gather/templates/account/upload_pic.html
+++ b/gather/templates/account/upload_pic.html
@@ -5,83 +5,35 @@
 
 {% block extra_css %}
 <link rel="stylesheet" href="{% static "upload/css/jquery.Jcrop.css" %}" type="text/css" />
-<style type="text/css">
-
-/* Apply these styles only when #preview-pane has
-   been placed within the Jcrop widget */
-.jcrop-holder #preview-pane {
-  display: block;
-  position: absolute;
-  z-index: 2000;
-  top: 10px;
-  right: -280px;
-  padding: 6px;
-  border: 1px rgba(0,0,0,.4) solid;
-  background-color: white;
-
-  -webkit-border-radius: 6px;
-  -moz-border-radius: 6px;
-  border-radius: 6px;
-
-  -webkit-box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
-  -moz-box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
-  box-shadow: 1px 1px 5px 2px rgba(0, 0, 0, 0.2);
-}
-
-/* The Javascript code will set the aspect ratio of the crop
-   area based on the size of the thumbnail preview,
-   specified here */
-#preview-pane .preview-container {
-  width: 200px;
-  height: 200px;
-  overflow: hidden;
-}
-</style>
-
+<link rel="stylesheet" href="{% static "upload/css/jcrop.add.css" %}" type="text/css" />
 {% endblock %}
 
 {% block main %}
     <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
-        <div style="width:600px;height:400px;border:1px solid green">
-            <img src="/media/{{ profile.big_photo }}" id="target" alt="[Jcrop Example]"/>
-          <div id="preview-pane">
-            <div class="preview-container">
-              <img src="/media/{{ profile.big_photo }}" class="jcrop-preview" alt="Preview" />
+        <div class="col-md-7">
+          <div class="avatar-big" style="background-color:white">
+              <img src="/media/{{ profile.big_photo }}" id="target" alt="[Jcrop Example]"/>
+            <div id="preview-pane">
+              <div class="preview-container">
+                <img src="/media/{{ profile.big_photo }}" class="jcrop-preview" alt="Preview" />
+              </div>
             </div>
           </div>
         </div>
-        <form action='{% url 'head_pic_big'%}' method="post" id="upload_form" enctype="multipart/form-data">
-          <input type="file" name="big_photo" value="" id="big"/>
-          <input type="hidden" name="crop" id="crop" value=""/>
-          <button class="btn btn-primary" type="submit" id="upload">上传</button>
-        </form>
+
+        <div class="col-md-1">
+          <form action='{% url 'head_pic_big'%}' method="post" id="upload_form" enctype="multipart/form-data" style="margin-top:500px;">
+            <input type="file" name="big_photo" value="" id="big"/>
+            <input type="hidden" name="crop" id="crop" value=""/>
+            <button class="btn btn-primary" type="submit" id="upload">上传</button>
+          </form>
+        </div>
       </div>
     </div>
 {% endblock %}
 
 {% block extra_js %}
 <script src="{% static "upload/js/jquery.Jcrop.js" %}"></script>
-<script type="text/javascript">
-
-  $("#big").change(function(){
-    photo_name = $(this).val();
-    if(photo_name.indexOf("png")||photo_name.indexOf("jpg")||photo_name.indexOf("jpeg")){
-      $("#upload_form").submit();
-    }else{
-      alert("请上传png,jpg,jpeg格式的图片");
-    }
-  });
-
-  $("#upload").click(function(){
-    var top = $(".jcrop-holder div").css("top");
-    var left = $(".jcrop-holder div").css("left");
-    var width = $(".jcrop-holder div").css("width");
-    var height = $(".jcrop-holder div").css("height");
-    var crop = top + ":" + left + ":" + width + ":" + height;
-    $("#crop").val(crop);
-    $("#upload_form").submit();
-  });
-</script>
+<script src="{% static "upload/js/jcrop.add.js" %}"></script>
 {% endblock %}
