添加点击次数显示

--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -87,7 +87,8 @@
       </div>
       <div class="modal-footer-note">
       <div class="form-inline">
-        <a href="javascript:;"><span class="glyphicon glyphicon-heart heart-left" style="padding:5px;margin-right:200px;" id="heart" value="0"></span></a>
+        <a href="javascript:;"><span class="glyphicon glyphicon-heart heart-left" style="padding:5px;margin-right:50px;" id="heart" value="0"></span></a>
+        <label style="color:#999999;margin-right:50px;">共点击<label id="read_sum">123</label>次</label>
         <input type="text" class="form-control input-md" name="comment" id="comment_content"/>
         <button type="button" class="btn btn-primary" id="say">发表</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
