--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -109,8 +109,8 @@
       <form action="{% url 'login' %}" method="post" class="form-signin" role="form">
         <div class="modal-body">
             {% csrf_token %}
-              <input type="text" placeholder="邮箱地址" class="form-control" name="username">
-              <input type="password" placeholder="密码" class="form-control" name="password">
+              <input type="text" placeholder="邮箱地址" class="form-control" name="username"/>
+              <input type="password" placeholder="密码" class="form-control" name="password"/>
         </div>
         <div class="modal-footer-login">
           <div class="form-inline">
