--- a/gather/static/styles/bootstrap.css
+++ b/gather/static/styles/bootstrap.css
@@ -6417,5 +6417,6 @@ button.close {
 
 .x-none{
   overflow-x: hidden;
+  background: url('/static/images/bg.jpg');
 }
 /*# sourceMappingURL=bootstrap.css.map */
