修改评论样式问题

--- a/gather/templates/notes.html
+++ b/gather/templates/notes.html
@@ -65,24 +65,11 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <img src='' alt='-_-' style='width:40px;height:40px' class='img-rounded' id="note_url"/>
+        <span class="text-right" id="note_created"></span>
         <h4 class="modal-title" id="myModalLabel"></h4>
       </div>
       <div class="modal-body note-scrollable" id="comment-body">
-
-        <!--
-            <div style="border-top:1px solid #eee;margin-bottom:5px;">
-              <div class="row top5">
-                <div class="col-sm-note-1">
-                  <img src="/static/images/account.jpg" alt='140*140' style="width:40px;height:40px" class="img-rounded"/>
-                </div>
-                <div class="col-sm-note-11">
-                  <label class="reply">呵呵</label><br>
-                  <label class="reply-pubtime">2014-12-12 12:12&nbsp;&nbsp;<a href="">413761980@qq.com</a></label>
-                  <label class="text-right reply"><a href="">回复</a></label>
-                </div>
-              </div>
-            </div>
-      -->
 
       </div>
       <div class="modal-footer-note">
