优化便签查询,修改背影图片

--- a/gather/static/styles/bootstrap.css
+++ b/gather/static/styles/bootstrap.css
@@ -6417,6 +6417,6 @@ button.close {
 
 .x-none{
   overflow-x: hidden;
-  background: url('/static/images/bg.jpg');
+  background: url('/static/images/happy_birthday_to_me.png');
 }
 /*# sourceMappingURL=bootstrap.css.map */
