--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -3,6 +3,7 @@
 <head>
 <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="baidu-site-verification" content="QEiaJdc8fD" />
 {% load staticfiles %}
 {% block title %}
 <title>GATHER</title>
