添加百度统计

--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -94,6 +94,15 @@
     {% endfor %}
   </footer>
 {% endblock %} 
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?64535fc146e02dd3796c8f3ba3c67f6b";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 <script src="{% static "scripts/jquery.min.js" %}"></script> 
 <script src="{% static "scripts/bootstrap.min.js" %}"></script> 
