--- a/gather/templates/base_no_login.html
+++ b/gather/templates/base_no_login.html
@@ -49,6 +49,15 @@
       </footer>
 {% endblock %} 
 </div> <!-- /container -->
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "//hm.baidu.com/hm.js?64535fc146e02dd3796c8f3ba3c67f6b";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 <script src="{% static "scripts/jquery.min.js" %}"></script> 
 <script src="{% static "scripts/bootstrap.min.js" %}"></script> 
