--- a/gather/templates/base.html
+++ b/gather/templates/base.html
@@ -19,7 +19,7 @@
 </head>
 <body class="x-none">
 {% block header %} 
-    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background: url('/static/images/bg.jpg');">
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation" style="background-color:#428bca">
       <div class="container">
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
@@ -28,7 +28,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Gather</a>
+          <a class="navbar-brand" href="/"><label style="color:white">Gather</label></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           {% if request.user.is_authenticated %}
