--- a/gather/templates/account/index.html
+++ b/gather/templates/account/index.html
@@ -25,7 +25,7 @@
       <!-- 开发日志 -->
       {% for log in logs %}
       <div class="bs-callout bs-callout-info">
-        <span class="label label-danger" target="_blank">{{ log.created|date:'Y-m-d H:i:s' }}</span> 
+        <span class="label label-success" target="_blank">{{ log.created|date:'Y-m-d H:i:s' }}</span> 
         &nbsp;&nbsp;&nbsp;
         {{ log.content }}
       </div>
