--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -47,6 +47,9 @@ $("div").click(function(){
     });
     if(num == 4){
         window.location.href = '/note/';
+    }else if(num == 3){
+        window.location.href = '/pic/';
+
     }
 });
 </script>
