--- a/gather/static/styles/add.css
+++ b/gather/static/styles/add.css
@@ -11,6 +11,7 @@
     border-width: 1px 1px 1px 5px;
     margin: 20px 0;
     padding: 20px;
+    background-color: white;
 }
 
 .bs-callout-info {
