--- a/gather/templates/index.html
+++ b/gather/templates/index.html
@@ -49,7 +49,8 @@ $("div").click(function(){
         window.location.href = '/note/';
     }else if(num == 3){
         window.location.href = '/pic/';
-
+    }else if(num == 5){
+        window.location.href = '/help/';
     }
 });
 </script>
